<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="100dp"
        android:background="@color/blue"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/logoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/logo_text"
            android:textColor="@color/text_Color"
            android:textSize="28sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="username"
            android:backgroundTint="@color/back_tint"
            android:hint="@string/Email_hint"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:autofillHints="password"
            android:backgroundTint="@color/back_tint"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/but_tint"
            android:text="@string/login_text"
            android:textColor="@color/text_but_Color" />

        <TextView
            android:id="@+id/signupLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/signBut_text"
            android:textColor="@color/reg_link"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>


